@@ -1089,8 +1089,7 @@ void AstNode::detectSignWidthWorker(int &width_hint, bool &sign_hint, bool *foun
 			break;
 		}
 		if (str == "\\$size" || str == "\\$bits" || str == "\\$high" || str == "\\$low" || str == "\\$left" || str == "\\$right") {
-			width_hint = 32;
-			sign_hint = true;
+			width_hint = max(width_hint, 32);
 			break;
 		}
 		if (current_scope.count(str))
